--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,7 @@ build_flags =
 	-I.
 lib_deps = 
 	rweather/Crypto@^0.4.0
-extra_script = extra_script.py
+extra_scripts = extra_script.py
 
 [env:rnode]
 platform = atmelavr
@@ -216,3 +216,31 @@ lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
 	lewisxhe/AXP202X_Library@^1.1.3
+
+[env:ttgo-t-beam-transport]
+platform = espressif32
+board = ttgo-t-beam
+board_build.partitions = no_ota.csv
+build_flags =
+	${env.build_flags}
+	-DBOARD_MODEL=BOARD_TBEAM
+lib_deps =
+	${env.lib_deps}
+	adafruit/Adafruit SSD1306@^2.5.9
+	lewisxhe/AXP202X_Library@^1.1.3
+	ArduinoJson@^6.21.3
+	https://github.com/attermann/reticulum-cpp.git
+
+[env:ttgo-t-beam-transport-local]
+platform = espressif32
+board = ttgo-t-beam
+board_build.partitions = no_ota.csv
+build_flags =
+	${env.build_flags}
+	-DBOARD_MODEL=BOARD_TBEAM
+lib_deps =
+	${env.lib_deps}
+	adafruit/Adafruit SSD1306@^2.5.9
+	lewisxhe/AXP202X_Library@^1.1.3
+	ArduinoJson@^6.21.3
+lib_extra_dirs = ../local
