--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ src_dir = .
 [env]
 framework = arduino
 monitor_speed = 115200
+upload_speed = 921600
 build_flags = 
 	-Wall
 	-Wextra
@@ -247,6 +248,20 @@ lib_deps =
 	ArduinoJson@^6.21.3
 	https://github.com/attermann/reticulum-cpp.git
 
+[env:ttgo-lora32-v21-local]
+platform = espressif32
+board = ttgo-lora32-v21
+board_build.partitions = no_ota.csv
+build_flags = 
+	${env.build_flags}
+	-DBOARD_MODEL=BOARD_LORA32_V2_1
+lib_deps =
+	${env.lib_deps}
+	adafruit/Adafruit SSD1306@^2.5.9
+	lewisxhe/AXP202X_Library@^1.1.3
+	ArduinoJson@^6.21.3
+lib_extra_dirs = ../local
+
 [env:ttgo-t-beam-transport-local]
 platform = espressif32
 board = ttgo-t-beam
@@ -254,9 +269,11 @@ board_build.partitions = no_ota.csv
 build_flags =
 	${env.build_flags}
 	-DBOARD_MODEL=BOARD_TBEAM
+	-DAXP2101_PMU
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
 	lewisxhe/AXP202X_Library@^1.1.3
+	XPowersLib@^0.2.1
 	ArduinoJson@^6.21.3
 lib_extra_dirs = ../local
