Updated build file for new packages/names

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,8 @@ src_dir = .
 [env]
 framework = arduino
 monitor_speed = 115200
-upload_speed = 921600
+;upload_speed = 921600
+upload_speed = 460800
 build_flags = 
 	-Wall
 	-Wextra
@@ -34,7 +35,7 @@ build_flags =
 	-DBOARD_MODEL=BOARD_RNODE
 lib_deps =
 	${env.lib_deps}
-	https://github.com/attermann/reticulum-cpp.git
+	https://github.com/attermann/microReticulum.git
 
 [env:rnode-ng-20]
 platform = espressif32
@@ -46,9 +47,9 @@ build_flags =
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
-	lewisxhe/AXP202X_Library@^1.1.3
+	XPowersLib@^0.2.1
 	adafruit/Adafruit NeoPixel@^1.12.0
-	https://github.com/attermann/reticulum-cpp.git
+	https://github.com/attermann/microReticulum.git
 
 [env:rnode-ng-21]
 platform = espressif32
@@ -60,9 +61,9 @@ build_flags =
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
-	lewisxhe/AXP202X_Library@^1.1.3
+	XPowersLib@^0.2.1
 	adafruit/Adafruit NeoPixel@^1.12.0
-	https://github.com/attermann/reticulum-cpp.git
+	https://github.com/attermann/microReticulum.git
 
 [env:mega2560]
 platform = atmelavr
@@ -72,7 +73,7 @@ build_flags =
 	-DBOARD_MODEL=BOARD_HMBRW
 lib_deps =
 	${env.lib_deps}
-	https://github.com/attermann/reticulum-cpp.git
+	https://github.com/attermann/microReticulum.git
 
 [env:ttgo-t-beam]
 platform = espressif32
@@ -84,8 +85,8 @@ build_flags =
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
-	lewisxhe/AXP202X_Library@^1.1.3
-	https://github.com/attermann/reticulum-cpp.git
+	XPowersLib@^0.2.1
+	https://github.com/attermann/microReticulum.git
 
 [env:ttgo-lora32-v1]
 platform = espressif32
@@ -97,8 +98,8 @@ build_flags =
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
-	lewisxhe/AXP202X_Library@^1.1.3
-	https://github.com/attermann/reticulum-cpp.git
+	XPowersLib@^0.2.1
+	https://github.com/attermann/microReticulum.git
 
 [env:ttgo-lora32-v1-0-extled]
 platform = espressif32
@@ -111,8 +112,8 @@ build_flags =
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
-	lewisxhe/AXP202X_Library@^1.1.3
-	https://github.com/attermann/reticulum-cpp.git
+	XPowersLib@^0.2.1
+	https://github.com/attermann/microReticulum.git
 
 [env:ttgo-lora32-v2]
 platform = espressif32
@@ -124,8 +125,8 @@ build_flags =
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
-	lewisxhe/AXP202X_Library@^1.1.3
-	https://github.com/attermann/reticulum-cpp.git
+	XPowersLib@^0.2.1
+	https://github.com/attermann/microReticulum.git
 
 [env:ttgo-lora32-v21]
 platform = espressif32
@@ -137,8 +138,8 @@ build_flags =
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
-	lewisxhe/AXP202X_Library@^1.1.3
-	https://github.com/attermann/reticulum-cpp.git
+	XPowersLib@^0.2.1
+	https://github.com/attermann/microReticulum.git
 
 [env:ttgo-lora32-v21-extled]
 platform = espressif32
@@ -151,8 +152,8 @@ build_flags =
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
-	lewisxhe/AXP202X_Library@^1.1.3
-	https://github.com/attermann/reticulum-cpp.git
+	XPowersLib@^0.2.1
+	https://github.com/attermann/microReticulum.git
 
 [env:heltec_wifi_lora_32_V2]
 platform = espressif32
@@ -164,8 +165,8 @@ build_flags =
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
-	lewisxhe/AXP202X_Library@^1.1.3
-	https://github.com/attermann/reticulum-cpp.git
+	XPowersLib@^0.2.1
+	https://github.com/attermann/microReticulum.git
 
 [env:heltec_wifi_lora_32_V2-extled]
 platform = espressif32
@@ -178,8 +179,8 @@ build_flags =
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
-	lewisxhe/AXP202X_Library@^1.1.3
-	https://github.com/attermann/reticulum-cpp.git
+	XPowersLib@^0.2.1
+	https://github.com/attermann/microReticulum.git
 
 [env:heltec_wifi_lora_32_V3]
 platform = espressif32
@@ -191,8 +192,8 @@ build_flags =
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
-	lewisxhe/AXP202X_Library@^1.1.3
-	https://github.com/attermann/reticulum-cpp.git
+	XPowersLib@^0.2.1
+	https://github.com/attermann/microReticulum.git
 
 [env:heltec_wifi_lora_32_V3-extled]
 platform = espressif32
@@ -205,8 +206,8 @@ build_flags =
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
-	lewisxhe/AXP202X_Library@^1.1.3
-	https://github.com/attermann/reticulum-cpp.git
+	XPowersLib@^0.2.1
+	https://github.com/attermann/microReticulum.git
 
 [env:featheresp32]
 platform = espressif32
@@ -218,8 +219,8 @@ build_flags =
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
-	lewisxhe/AXP202X_Library@^1.1.3
-	https://github.com/attermann/reticulum-cpp.git
+	XPowersLib@^0.2.1
+	https://github.com/attermann/microReticulum.git
 
 [env:generic-esp32]
 platform = espressif32
@@ -231,22 +232,8 @@ build_flags =
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
-	lewisxhe/AXP202X_Library@^1.1.3
-	https://github.com/attermann/reticulum-cpp.git
-
-[env:ttgo-t-beam-transport]
-platform = espressif32
-board = ttgo-t-beam
-board_build.partitions = no_ota.csv
-build_flags =
-	${env.build_flags}
-	-DBOARD_MODEL=BOARD_TBEAM
-lib_deps =
-	${env.lib_deps}
-	adafruit/Adafruit SSD1306@^2.5.9
-	lewisxhe/AXP202X_Library@^1.1.3
-	ArduinoJson@^6.21.3
-	https://github.com/attermann/reticulum-cpp.git
+	XPowersLib@^0.2.1
+	https://github.com/attermann/microReticulum.git
 
 [env:ttgo-lora32-v21-local]
 platform = espressif32
@@ -258,7 +245,7 @@ build_flags =
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
-	lewisxhe/AXP202X_Library@^1.1.3
+	XPowersLib@^0.2.1
 	ArduinoJson@^6.21.3
 lib_extra_dirs = ../local
 
@@ -273,7 +260,6 @@ build_flags =
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
-	lewisxhe/AXP202X_Library@^1.1.3
 	XPowersLib@^0.2.1
 	ArduinoJson@^6.21.3
 lib_extra_dirs = ../local
