--- a/platformio.ini
+++ b/platformio.ini
@@ -78,6 +78,7 @@ lib_deps =
 [env:ttgo-t-beam]
 platform = espressif32
 board = ttgo-t-beam
+variant = tbeam
 board_build.partitions = no_ota.csv
 build_flags = 
 	${env.build_flags}
