Updated build packaging for full releases

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,19 +27,10 @@ lib_deps =
 	rweather/Crypto@^0.4.0
 extra_scripts = extra_script.py
 
-[env:rnode]
-platform = atmelavr
-board = ATmega1284P
-build_flags = 
-	${env.build_flags}
-	-DBOARD_MODEL=BOARD_RNODE
-lib_deps =
-	${env.lib_deps}
-	https://github.com/attermann/microReticulum.git
-
 [env:rnode-ng-20]
 platform = espressif32
 board = ttgo-lora32-v2
+variant = ng20
 board_build.partitions = no_ota.csv
 build_flags = 
 	${env.build_flags}
@@ -54,6 +45,7 @@ lib_deps =
 [env:rnode-ng-21]
 platform = espressif32
 board = ttgo-lora32-v21
+variant = ng21
 board_build.partitions = no_ota.csv
 build_flags = 
 	${env.build_flags}
@@ -63,16 +55,6 @@ lib_deps =
 	adafruit/Adafruit SSD1306@^2.5.9
 	XPowersLib@^0.2.1
 	adafruit/Adafruit NeoPixel@^1.12.0
-	https://github.com/attermann/microReticulum.git
-
-[env:mega2560]
-platform = atmelavr
-board = ATmega2560
-build_flags = 
-	${env.build_flags}
-	-DBOARD_MODEL=BOARD_HMBRW
-lib_deps =
-	${env.lib_deps}
 	https://github.com/attermann/microReticulum.git
 
 [env:ttgo-t-beam]
@@ -92,6 +74,7 @@ lib_deps =
 [env:ttgo-lora32-v1]
 platform = espressif32
 board = ttgo-lora32-v1
+variant = lora32v10
 board_build.partitions = no_ota.csv
 build_flags = 
 	${env.build_flags}
@@ -102,9 +85,24 @@ lib_deps =
 	XPowersLib@^0.2.1
 	https://github.com/attermann/microReticulum.git
 
-[env:ttgo-lora32-v1-0-extled]
+[env:ttgo-lora32-v2]
 platform = espressif32
-board = ttgo-lora32-v1
+board = ttgo-lora32-v2
+variant = lora32v20
+board_build.partitions = no_ota.csv
+build_flags = 
+	${env.build_flags}
+	-DBOARD_MODEL=BOARD_LORA32_V2_0
+lib_deps =
+	${env.lib_deps}
+	adafruit/Adafruit SSD1306@^2.5.9
+	XPowersLib@^0.2.1
+	https://github.com/attermann/microReticulum.git
+
+[env:ttgo-lora32-v2-extled]
+platform = espressif32
+board = ttgo-lora32-v2
+variant = lora32v20_extled
 board_build.partitions = no_ota.csv
 build_flags = 
 	${env.build_flags}
@@ -116,22 +114,10 @@ lib_deps =
 	XPowersLib@^0.2.1
 	https://github.com/attermann/microReticulum.git
 
-[env:ttgo-lora32-v2]
-platform = espressif32
-board = ttgo-lora32-v2
-board_build.partitions = no_ota.csv
-build_flags = 
-	${env.build_flags}
-	-DBOARD_MODEL=BOARD_LORA32_V2_0
-lib_deps =
-	${env.lib_deps}
-	adafruit/Adafruit SSD1306@^2.5.9
-	XPowersLib@^0.2.1
-	https://github.com/attermann/microReticulum.git
-
 [env:ttgo-lora32-v21]
 platform = espressif32
 board = ttgo-lora32-v21
+variant = lora32v21
 board_build.partitions = no_ota.csv
 build_flags = 
 	${env.build_flags}
@@ -145,6 +131,7 @@ lib_deps =
 [env:ttgo-lora32-v21-extled]
 platform = espressif32
 board = ttgo-lora32-v21
+variant = lora32v21_extled
 board_build.partitions = no_ota.csv
 build_flags = 
 	${env.build_flags}
@@ -159,6 +146,7 @@ lib_deps =
 [env:heltec_wifi_lora_32_V2]
 platform = espressif32
 board = heltec_wifi_lora_32_V2
+variant = heltec32v2
 board_build.partitions = no_ota.csv
 build_flags = 
 	${env.build_flags}
@@ -172,6 +160,7 @@ lib_deps =
 [env:heltec_wifi_lora_32_V2-extled]
 platform = espressif32
 board = heltec_wifi_lora_32_V2
+variant = heltec32v2_extled
 board_build.partitions = no_ota.csv
 build_flags = 
 	${env.build_flags}
@@ -183,36 +172,39 @@ lib_deps =
 	XPowersLib@^0.2.1
 	https://github.com/attermann/microReticulum.git
 
-[env:heltec_wifi_lora_32_V3]
-platform = espressif32
-board = heltec_wifi_lora_32_V3
-board_build.partitions = no_ota.csv
-build_flags = 
-	${env.build_flags}
-	-DBOARD_MODEL=BOARD_LORA32_V2_1
-lib_deps =
-	${env.lib_deps}
-	adafruit/Adafruit SSD1306@^2.5.9
-	XPowersLib@^0.2.1
-	https://github.com/attermann/microReticulum.git
+;[env:heltec_wifi_lora_32_V3]
+;platform = espressif32
+;board = heltec_wifi_lora_32_V3
+;variant = heltec32v3
+;board_build.partitions = no_ota.csv
+;build_flags = 
+;	${env.build_flags}
+;	-DBOARD_MODEL=BOARD_LORA32_V2_1
+;lib_deps =
+;	${env.lib_deps}
+;	adafruit/Adafruit SSD1306@^2.5.9
+;	XPowersLib@^0.2.1
+;	https://github.com/attermann/microReticulum.git
 
-[env:heltec_wifi_lora_32_V3-extled]
-platform = espressif32
-board = heltec_wifi_lora_32_V3
-board_build.partitions = no_ota.csv
-build_flags = 
-	${env.build_flags}
-	-DBOARD_MODEL=BOARD_LORA32_V2_1
-	-DEXTERNAL_LEDS=true
-lib_deps =
-	${env.lib_deps}
-	adafruit/Adafruit SSD1306@^2.5.9
-	XPowersLib@^0.2.1
-	https://github.com/attermann/microReticulum.git
+;[env:heltec_wifi_lora_32_V3-extled]
+;platform = espressif32
+;board = heltec_wifi_lora_32_V3
+;variant = heltec32v3_extled
+;board_build.partitions = no_ota.csv
+;build_flags = 
+;	${env.build_flags}
+;	-DBOARD_MODEL=BOARD_LORA32_V2_1
+;	-DEXTERNAL_LEDS=true
+;lib_deps =
+;	${env.lib_deps}
+;	adafruit/Adafruit SSD1306@^2.5.9
+;	XPowersLib@^0.2.1
+;	https://github.com/attermann/microReticulum.git
 
 [env:featheresp32]
 platform = espressif32
 board = featheresp32
+variant = featheresp32
 board_build.partitions = no_ota.csv
 build_flags = 
 	${env.build_flags}
@@ -226,6 +218,7 @@ lib_deps =
 [env:generic-esp32]
 platform = espressif32
 board = esp32dev
+variant = esp32_generic
 board_build.partitions = no_ota.csv
 build_flags = 
 	${env.build_flags}
@@ -239,6 +232,7 @@ lib_deps =
 [env:ttgo-lora32-v21-local]
 platform = espressif32
 board = ttgo-lora32-v21
+variant = lora32v21_local
 board_build.partitions = no_ota.csv
 build_flags = 
 	${env.build_flags}
@@ -250,9 +244,10 @@ lib_deps =
 	ArduinoJson@^6.21.3
 lib_extra_dirs = ../local
 
-[env:ttgo-t-beam-transport-local]
+[env:ttgo-t-beam-local]
 platform = espressif32
 board = ttgo-t-beam
+vriant = tbeam_local
 board_build.partitions = no_ota.csv
 build_flags =
 	${env.build_flags}
