WIP: First experimental firmware release

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,8 +15,8 @@ src_dir = .
 [env]
 framework = arduino
 monitor_speed = 115200
-;upload_speed = 921600
-upload_speed = 460800
+upload_speed = 921600
+;upload_speed = 460800
 build_flags = 
 	-Wall
 	;-Wextra
@@ -32,6 +32,7 @@ platform = espressif32
 board = ttgo-lora32-v2
 variant = ng20
 board_build.partitions = no_ota.csv
+board_build.filesystem = littlefs
 build_flags = 
 	${env.build_flags}
 	-DBOARD_MODEL=BOARD_RNODE_NG_20
@@ -47,9 +48,26 @@ platform = espressif32
 board = ttgo-lora32-v21
 variant = ng21
 board_build.partitions = no_ota.csv
+board_build.filesystem = littlefs
 build_flags = 
 	${env.build_flags}
 	-DBOARD_MODEL=BOARD_RNODE_NG_21
+lib_deps =
+	${env.lib_deps}
+	adafruit/Adafruit SSD1306@^2.5.9
+	XPowersLib@^0.2.1
+	adafruit/Adafruit NeoPixel@^1.12.0
+	https://github.com/attermann/microReticulum.git
+
+[env:rnode-ng-22]
+platform = espressif32
+board = heltec_wifi_lora_32_V3
+variant = ng22
+board_build.partitions = no_ota.csv
+board_build.filesystem = littlefs
+build_flags = 
+	${env.build_flags}
+	-DBOARD_MODEL=BOARD_RNODE_NG_22
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
@@ -62,6 +80,7 @@ platform = espressif32
 board = ttgo-t-beam
 variant = tbeam
 board_build.partitions = no_ota.csv
+board_build.filesystem = littlefs
 build_flags = 
 	${env.build_flags}
 	-DBOARD_MODEL=BOARD_TBEAM
@@ -77,6 +96,7 @@ platform = espressif32
 board = ttgo-lora32-v1
 variant = lora32v10
 board_build.partitions = no_ota.csv
+board_build.filesystem = littlefs
 build_flags = 
 	${env.build_flags}
 	-DBOARD_MODEL=BOARD_LORA32_V1_0
@@ -91,6 +111,7 @@ platform = espressif32
 board = ttgo-lora32-v2
 variant = lora32v20
 board_build.partitions = no_ota.csv
+board_build.filesystem = littlefs
 build_flags = 
 	${env.build_flags}
 	-DBOARD_MODEL=BOARD_LORA32_V2_0
@@ -105,6 +126,7 @@ platform = espressif32
 board = ttgo-lora32-v2
 variant = lora32v20_extled
 board_build.partitions = no_ota.csv
+board_build.filesystem = littlefs
 build_flags = 
 	${env.build_flags}
 	-DBOARD_MODEL=BOARD_LORA32_V1_0
@@ -120,6 +142,7 @@ platform = espressif32
 board = ttgo-lora32-v21
 variant = lora32v21
 board_build.partitions = no_ota.csv
+board_build.filesystem = littlefs
 build_flags = 
 	${env.build_flags}
 	-DBOARD_MODEL=BOARD_LORA32_V2_1
@@ -134,6 +157,7 @@ platform = espressif32
 board = ttgo-lora32-v21
 variant = lora32v21_extled
 board_build.partitions = no_ota.csv
+board_build.filesystem = littlefs
 build_flags = 
 	${env.build_flags}
 	-DBOARD_MODEL=BOARD_LORA32_V2_1
@@ -149,6 +173,7 @@ platform = espressif32
 board = heltec_wifi_lora_32_V2
 variant = heltec32v2
 board_build.partitions = no_ota.csv
+board_build.filesystem = littlefs
 build_flags = 
 	${env.build_flags}
 	-DBOARD_MODEL=BOARD_LORA32_V2_1
@@ -163,6 +188,7 @@ platform = espressif32
 board = heltec_wifi_lora_32_V2
 variant = heltec32v2_extled
 board_build.partitions = no_ota.csv
+board_build.filesystem = littlefs
 build_flags = 
 	${env.build_flags}
 	-DBOARD_MODEL=BOARD_LORA32_V2_1
@@ -173,40 +199,43 @@ lib_deps =
 	XPowersLib@^0.2.1
 	https://github.com/attermann/microReticulum.git
 
-;[env:heltec_wifi_lora_32_V3]
-;platform = espressif32
-;board = heltec_wifi_lora_32_V3
-;variant = heltec32v3
-;board_build.partitions = no_ota.csv
-;build_flags = 
-;	${env.build_flags}
-;	-DBOARD_MODEL=BOARD_LORA32_V2_1
-;lib_deps =
-;	${env.lib_deps}
-;	adafruit/Adafruit SSD1306@^2.5.9
-;	XPowersLib@^0.2.1
-;	https://github.com/attermann/microReticulum.git
+[env:heltec_wifi_lora_32_V3]
+platform = espressif32
+board = heltec_wifi_lora_32_V3
+variant = heltec32v3
+board_build.partitions = no_ota.csv
+board_build.filesystem = littlefs
+build_flags = 
+	${env.build_flags}
+	-DBOARD_MODEL=BOARD_HELTEC32_V3
+lib_deps =
+	${env.lib_deps}
+	adafruit/Adafruit SSD1306@^2.5.9
+	XPowersLib@^0.2.1
+	https://github.com/attermann/microReticulum.git
 
-;[env:heltec_wifi_lora_32_V3-extled]
-;platform = espressif32
-;board = heltec_wifi_lora_32_V3
-;variant = heltec32v3_extled
-;board_build.partitions = no_ota.csv
-;build_flags = 
-;	${env.build_flags}
-;	-DBOARD_MODEL=BOARD_LORA32_V2_1
-;	-DEXTERNAL_LEDS=true
-;lib_deps =
-;	${env.lib_deps}
-;	adafruit/Adafruit SSD1306@^2.5.9
-;	XPowersLib@^0.2.1
-;	https://github.com/attermann/microReticulum.git
+[env:heltec_wifi_lora_32_V3-extled]
+platform = espressif32
+board = heltec_wifi_lora_32_V3
+variant = heltec32v3_extled
+board_build.partitions = no_ota.csv
+board_build.filesystem = littlefs
+build_flags = 
+	${env.build_flags}
+	-DBOARD_MODEL=BOARD_HELTEC32_V3
+	-DEXTERNAL_LEDS=true
+lib_deps =
+	${env.lib_deps}
+	adafruit/Adafruit SSD1306@^2.5.9
+	XPowersLib@^0.2.1
+	https://github.com/attermann/microReticulum.git
 
 [env:featheresp32]
 platform = espressif32
 board = featheresp32
 variant = featheresp32
 board_build.partitions = no_ota.csv
+board_build.filesystem = littlefs
 build_flags = 
 	${env.build_flags}
 	-DBOARD_MODEL=BOARD_HUZZAH32
@@ -221,6 +250,7 @@ platform = espressif32
 board = esp32dev
 variant = esp32_generic
 board_build.partitions = no_ota.csv
+board_build.filesystem = littlefs
 build_flags = 
 	${env.build_flags}
 	-DBOARD_MODEL=BOARD_GENERIC_ESP32
@@ -235,6 +265,7 @@ platform = nordicnrf52
 board = wiscore_rak4631
 variant = rak4631
 board_build.partitions = no_ota.csv
+board_build.filesystem = littlefs
 build_flags = 
 	${env.build_flags}
 	-fexceptions
@@ -250,6 +281,7 @@ platform = espressif32
 board = ttgo-lora32-v21
 variant = lora32v21_local
 board_build.partitions = no_ota.csv
+board_build.filesystem = littlefs
 build_flags = 
 	${env.build_flags}
 	-DBOARD_MODEL=BOARD_LORA32_V2_1
@@ -265,8 +297,10 @@ platform = espressif32
 board = ttgo-t-beam
 variant = tbeam_local
 board_build.partitions = no_ota.csv
+board_build.filesystem = littlefs
 build_flags =
 	${env.build_flags}
+	-fexceptions
 	-DBOARD_MODEL=BOARD_TBEAM
 	-DAXP2101_PMU
 lib_deps =
@@ -275,12 +309,14 @@ lib_deps =
 	XPowersLib@^0.2.1
 	ArduinoJson@^6.21.3
 	microReticulum=symlink://../microReticulum
+monitor_filters = esp32_exception_decoder
 
 [env:wiscore_rak4631-local]
 platform = nordicnrf52
 board = wiscore_rak4631
 variant = rak4631_local
 board_build.partitions = no_ota.csv
+board_build.filesystem = littlefs
 build_flags = 
 	${env.build_flags}
 	-fexceptions
