WIP: Updates for latest RNS stack.

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,21 +16,23 @@ src_dir = .
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-;upload_speed = 460800
 build_flags = 
 	-Wall
 	;-Wextra
 	-Wno-missing-field-initializers
 	-Wno-format
 	-I.
+	-DHAS_RNS
+	-DLFS_NO_ASSERT
+	;-DNDEBUG
 lib_deps = 
-	rweather/Crypto@^0.4.0
-extra_scripts = extra_script.py
+	https://github.com/attermann/arduinolibs.git
+extra_scripts = pre:extra_script.py
 
 [env:rnode-ng-20]
 platform = espressif32
 board = ttgo-lora32-v2
-variant = ng20
+custom_variant = ng20
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
 build_flags = 
@@ -46,7 +48,7 @@ lib_deps =
 [env:rnode-ng-21]
 platform = espressif32
 board = ttgo-lora32-v21
-variant = ng21
+custom_variant = ng21
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
 build_flags = 
@@ -62,7 +64,7 @@ lib_deps =
 [env:rnode-ng-22]
 platform = espressif32
 board = heltec_wifi_lora_32_V3
-variant = ng22
+custom_variant = ng22
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
 build_flags = 
@@ -78,7 +80,7 @@ lib_deps =
 [env:ttgo-t-beam]
 platform = espressif32
 board = ttgo-t-beam
-variant = tbeam
+custom_variant = tbeam
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
 build_flags = 
@@ -91,10 +93,27 @@ lib_deps =
 	XPowersLib@^0.2.1
 	https://github.com/attermann/microReticulum.git
 
+[env:ttgo-t-beam-sx1262]
+platform = espressif32
+board = ttgo-t-beam
+custom_variant = tbeam_sx1262
+board_build.partitions = no_ota.csv
+board_build.filesystem = littlefs
+build_flags = 
+	${env.build_flags}
+	-DBOARD_MODEL=BOARD_TBEAM
+	-DMODEM=SX1262
+	-DAXP2101_PMU
+lib_deps =
+	${env.lib_deps}
+	adafruit/Adafruit SSD1306@^2.5.9
+	XPowersLib@^0.2.1
+	https://github.com/attermann/microReticulum.git
+
 [env:ttgo-lora32-v1]
 platform = espressif32
 board = ttgo-lora32-v1
-variant = lora32v10
+custom_variant = lora32v10
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
 build_flags = 
@@ -109,7 +128,7 @@ lib_deps =
 [env:ttgo-lora32-v2]
 platform = espressif32
 board = ttgo-lora32-v2
-variant = lora32v20
+custom_variant = lora32v20
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
 build_flags = 
@@ -124,7 +143,7 @@ lib_deps =
 [env:ttgo-lora32-v2-extled]
 platform = espressif32
 board = ttgo-lora32-v2
-variant = lora32v20_extled
+custom_variant = lora32v20_extled
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
 build_flags = 
@@ -140,7 +159,7 @@ lib_deps =
 [env:ttgo-lora32-v21]
 platform = espressif32
 board = ttgo-lora32-v21
-variant = lora32v21
+custom_variant = lora32v21
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
 build_flags = 
@@ -155,7 +174,7 @@ lib_deps =
 [env:ttgo-lora32-v21-extled]
 platform = espressif32
 board = ttgo-lora32-v21
-variant = lora32v21_extled
+custom_variant = lora32v21_extled
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
 build_flags = 
@@ -171,7 +190,7 @@ lib_deps =
 [env:heltec_wifi_lora_32_V2]
 platform = espressif32
 board = heltec_wifi_lora_32_V2
-variant = heltec32v2
+custom_variant = heltec32v2
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
 build_flags = 
@@ -186,7 +205,7 @@ lib_deps =
 [env:heltec_wifi_lora_32_V2-extled]
 platform = espressif32
 board = heltec_wifi_lora_32_V2
-variant = heltec32v2_extled
+custom_variant = heltec32v2_extled
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
 build_flags = 
@@ -202,7 +221,7 @@ lib_deps =
 [env:heltec_wifi_lora_32_V3]
 platform = espressif32
 board = heltec_wifi_lora_32_V3
-variant = heltec32v3
+custom_variant = heltec32v3
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
 build_flags = 
@@ -217,7 +236,7 @@ lib_deps =
 [env:heltec_wifi_lora_32_V3-extled]
 platform = espressif32
 board = heltec_wifi_lora_32_V3
-variant = heltec32v3_extled
+custom_variant = heltec32v3_extled
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
 build_flags = 
@@ -233,7 +252,7 @@ lib_deps =
 [env:featheresp32]
 platform = espressif32
 board = featheresp32
-variant = featheresp32
+custom_variant = featheresp32
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
 build_flags = 
@@ -248,7 +267,7 @@ lib_deps =
 [env:generic-esp32]
 platform = espressif32
 board = esp32dev
-variant = esp32_generic
+custom_variant = esp32_generic
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
 build_flags = 
@@ -263,7 +282,7 @@ lib_deps =
 [env:wiscore_rak4631]
 platform = nordicnrf52
 board = wiscore_rak4631
-variant = rak4631
+custom_variant = rak4631
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
 build_flags = 
@@ -279,7 +298,7 @@ lib_deps =
 [env:ttgo-lora32-v21-local]
 platform = espressif32
 board = ttgo-lora32-v21
-variant = lora32v21_local
+custom_variant = lora32v21_local
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
 build_flags = 
@@ -295,9 +314,10 @@ lib_deps =
 [env:ttgo-t-beam-local]
 platform = espressif32
 board = ttgo-t-beam
-variant = tbeam_local
+custom_variant = tbeam_local
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
+upload_speed = 460800
 build_flags =
 	${env.build_flags}
 	-fexceptions
@@ -314,7 +334,7 @@ monitor_filters = esp32_exception_decoder
 [env:wiscore_rak4631-local]
 platform = nordicnrf52
 board = wiscore_rak4631
-variant = rak4631_local
+custom_variant = rak4631_local
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
 build_flags = 
