WIP: Many enhancements around persistence and stability
- Filesystem enhancements
- Logging optimizations
- Added NoopFilesystem for testing with no flash storage access
- More robust NRF52 EEPROM init

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,9 +22,21 @@ build_flags =
 	-Wno-missing-field-initializers
 	-Wno-format
 	-I.
-	-DHAS_RNS
-	-DLFS_NO_ASSERT
+	; CBA Define following to disable DEBUG build
 	;-DNDEBUG
+	; CBA Define following to include RNS stack
+	-DHAS_RNS
+	-DRNS_USE_FS
+	-DRNS_PERSIST_PATHS
+	; CBA Define following to disable LFS asserts
+	;-DLFS_NO_ASSERT
+	; ???
+	;-DLFS_YES_TRACE
+	; ???
+	;-DCORE_DEBUG_LEVEL=5
+	; ??? NO
+	;-DLOG_LOCAL_LEVEL=5
+	;-DCONFIG_LOG_DEFAULT_LEVEL=5
 lib_deps = 
 	https://github.com/attermann/arduinolibs.git
 extra_scripts = pre:extra_script.py
@@ -289,6 +301,8 @@ build_flags =
 	${env.build_flags}
 	-fexceptions
 	-DBOARD_MODEL=BOARD_RAK4631
+	-DRNS_USE_ALLOCATOR=1
+	-DRNS_USE_TLSF=1
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
@@ -298,6 +312,7 @@ lib_deps =
 [env:ttgo-lora32-v21-local]
 platform = espressif32
 board = ttgo-lora32-v21
+upload_speed = 460800
 custom_variant = lora32v21_local
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
@@ -310,14 +325,15 @@ lib_deps =
 	XPowersLib@^0.2.1
 	ArduinoJson@^6.21.3
 	microReticulum=symlink://../microReticulum
+monitor_filters = esp32_exception_decoder
 
 [env:ttgo-t-beam-local]
 platform = espressif32
 board = ttgo-t-beam
+upload_speed = 460800
 custom_variant = tbeam_local
 board_build.partitions = no_ota.csv
 board_build.filesystem = littlefs
-upload_speed = 460800
 build_flags =
 	${env.build_flags}
 	-fexceptions
@@ -341,6 +357,8 @@ build_flags =
 	${env.build_flags}
 	-fexceptions
 	-DBOARD_MODEL=BOARD_RAK4631
+	-DRNS_USE_ALLOCATOR=1
+	-DRNS_USE_TLSF=1
 build_unflags = -fno-exceptions
 lib_deps =
 	${env.lib_deps}
