--- a/platformio.ini
+++ b/platformio.ini
@@ -339,12 +339,15 @@ build_flags =
 	-fexceptions
 	-DBOARD_MODEL=BOARD_TBEAM
 	-DAXP2101_PMU
+	; CBA TEST
+	;-DUSE_FLASHFS=1
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
 	XPowersLib@^0.2.1
 	ArduinoJson@^6.21.3
 	microReticulum=symlink://../microReticulum
+	Adafruit_SPIFlash=symlink://../Adafruit_SPIFlash
 monitor_filters = esp32_exception_decoder
 
 [env:wiscore_rak4631-local]
@@ -357,11 +360,14 @@ build_flags =
 	${env.build_flags}
 	-fexceptions
 	-DBOARD_MODEL=BOARD_RAK4631
+	; CBA TEST
 	-DRNS_USE_ALLOCATOR=1
 	-DRNS_USE_TLSF=1
+	;-DUSE_FLASHFS=1
 build_unflags = -fno-exceptions
 lib_deps =
 	${env.lib_deps}
 	adafruit/Adafruit SSD1306@^2.5.9
 	ArduinoJson@^6.21.3
 	microReticulum=symlink://../microReticulum
+	Adafruit_SPIFlash=symlink://../Adafruit_SPIFlash
